--- a/style.css
+++ b/style.css
@@ -100,9 +100,25 @@ a:hover{
     flex-grow: 1.2;
 }
 
-.quote{
+.quote-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     flex-grow: 1.1;
     background-color: #E5E7EB;
+}
+
+.quote-text{
+    font-size: 36px;
+    font-weight: 300;
+    color: #1F2937;
+    width: 800px;
+}
+
+.quote-author{
+    font-weight: bold;
+    justify-self: flex-end;
 }
 
 .sign-up{
