--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a:hover{
     font-weight: 900;
 }
 
+.sign-up-button-white-border,
 .sign-up-button{
     background-color: #3882F6;
     color: #F9FAF8;
@@ -70,12 +71,17 @@ a:hover{
     width: 72px;
     height: 24px;
     margin-top: 8px;
+    font-weight: bold;
 }
 
+.sign-up-button-white-border{
+    border: 1px solid #F9FAF8;
+}
+
+.sign-up-button-white-border:hover,
 .sign-up-button:hover{
     cursor: pointer;
     background-color: #1d74ff;
-    font-weight: bolder;
 }
 
 .image-placeholder{
@@ -121,8 +127,32 @@ a:hover{
     justify-self: flex-end;
 }
 
-.sign-up{
+.call-to-action-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-grow: 1;
+}
+
+.call-to-action-box{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    color: white;
+    height: 100px;
+    width: 1000px;
+}
+
+.call-to-action-main-text{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight:500;
+}
+
+.call-to-action-secondary-text{
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .footer{
@@ -134,34 +164,3 @@ a:hover{
     font-size: 18px;
     color: #E5E7EB;
 }
-
-/* .main{
-    display: flex;
-    flex-direction: column;;
-    background-color:aqua;
-    flex-grow: 1;
-}
-
-.footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:#1F2937;
-    color: white;
-    height: 50px;
-}
-
-.info-header{
-    background-color: white;
-    height: 250px;
-}
-
-.quote{
-    background-color: #E5E7EB;
-    height: 230px;
-}
-
-.sign-up{
-    height: 200px;
-    background-color: white;
-} */
