--- a/style.css
+++ b/style.css
@@ -103,7 +103,31 @@ a:hover{
 }
 
 .info-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     flex-grow: 1.2;
+}
+
+.info-header-text{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.image-row{
+    display:flex;
+    margin-top: 12px;
+    margin-bottom: 24px;
+    gap: 24px;
+}
+
+.square{
+    height: 100px;
+    width: 100px;
+    border: 4px solid #3882F6;
+    border-radius: 10px;
 }
 
 .quote-section{
